--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "expo-localization": "~14.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
