--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "spendtracker",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest"
   },
@@ -18,9 +17,12 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
-    "expo": "~47.0.8",
+    "add": "^2.0.6",
+    "expo": "~47.0.12",
     "expo-asset": "~8.7.0",
+    "expo-dev-client": "~2.0.1",
     "expo-file-system": "~15.1.1",
+    "expo-localization": "~14.0.0",
     "expo-sqlite": "~11.0.0",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
@@ -29,14 +31,14 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-google-mobile-ads": "^10.0.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
-    "expo-localization": "~14.0.0",
-    "expo-dev-client": "~2.0.1"
+    "expo-splash-screen": "~0.17.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
