--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "add": "^2.0.6",
+    "eas": "^0.1.0",
     "expo": "~47.0.12",
     "expo-asset": "~8.7.0",
     "expo-dev-client": "~2.0.1",
     "expo-file-system": "~15.1.1",
     "expo-localization": "~14.0.0",
+    "expo-splash-screen": "~0.17.5",
     "expo-sqlite": "~11.0.0",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
@@ -37,8 +39,7 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.0",
-    "expo-splash-screen": "~0.17.5"
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
